# celestron-nexstar

./: .codecov.yml  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  BACKGROUND_TRACKING.md  CATALOG_EXPANSION_PLAN.md  CHANGELOG.md  GUI_FEATURES.md  INTERACTIVE_SHELL.md  Justfile  PERFORMANCE_OPTIMIZATIONS.md  README.md  WHATS_VISIBLE_TONIGHT_PLAN.md  alembic.ini  nexstar_vacation_2025-11-09_plan_Fairbanks-Fairbanks-North-Star_60days.txt  nexstar_vacation_2025-11-09_plan_Fairbanks-Fairbanks-North-Star_7days_20251215-20251222.txt  pyproject.toml  ruff_errors.txt  run_tests.sh  test_database_refactor.py  test_database_simple.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  wiki-sync.yml
alembic/: env.py
alembic/versions/: 030d966a662d_add_space_events_table.py  1a2b3c4d5e6f_add_geohash_to_iss_passes.py  20250118000000_add_p40_p60_stddev_to_historical_weather.py  20250127120000_add_indexes_for_celestial_data.py  20250127130000_add_parent_planet_index.py  20250127140000_merge_migration_heads.py  20250127150000_add_missing_indexes_for_performance.py  20250128000000_add_sky_at_a_glance_table.py  20250128010000_rename_sky_at_a_glance_to_rss_feeds.py  20250129000000_add_geohash_index_to_dark_sky_sites.py  20250130000000_add_iss_pass_composite_index.py  20250131000000_split_objects_table_by_type.py  20250131010000_merge_migration_heads.py  20250201000000_add_asterism_extended_fields.py  20250201010000_add_unique_constraints_to_names.py  20250201020000_add_favorites_table.py  20250201020001_migrate_favorites_from_preferences.py  20250201020002_add_equipment_tables.py  20251112195646_add_tle_data_table.py  20251112195700_merge_tle_and_weather_geohash.py  20251117210131_add_historical_weather_table.py  20251127220200_add_constellation_magnitude_indexes.py  24a9158bd045_add_observations_and_user_preferences_.py  2a973e257b4d_add_weather_forecast_table.py  2fbc85dc151b_add_common_name_index.py  3007dcb04010_add_geohash_to_dark_sky_sites.py  30477aac527b_add_variable_stars_comets_eclipses_.py  3c4d5e6f7a8b_add_geohash_to_weather_forecast.py  565d35ca5a03_initial_schema_with_fts5_support.py  623f166524aa_add_dark_sky_sites_table.py  9a8b7c6d5e4f_add_geohash_to_light_pollution_grid.py  a1b2c3d4e5f6_add_iss_constellations_asterisms_meteor_showers.py  a7f3b8c9d2e1_add_ephemeris_files_table.py  b5150659897f_initial_schema_with_fts5_support.py  f1e2d3c4b5a6_add_star_name_mappings_table.py
docs/: CATALOG_DATA_SOURCES.md  CLI.md  CLI_DATA_IMPORT_FEATURE.md  CONTRIBUTING.md  COSMOS_INTEGRATION.md  CUSTOM_CATALOG.md  CUSTOM_YAML_FEATURE.md  DATABASE_GIT_SETUP.md  DATA_IMPORT.md  FRESH_MIGRATION_COMPLETE.md  FULL_SCREEN_TUI_PLAN.md  HELP_MENU_UPDATE.md  INDEX.md  INSTALL.md  ORGANIZATION.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  SEMANTIC_VERSIONING.md  SPACE_WEATHER_INTEGRATION.md  SQLALCHEMY_COMPLETE.md  SQLALCHEMY_MIGRATION_PLAN.md  TUI_FRAMEWORK_OPTIONS.md  converters_docs.md  examples_docs.md  exceptions_docs.md  init_docs.md  nexstar_commands.md  protocol_docs.md  telescope_docs.md  types_docs.md  utils_docs.md
docs/api/: exceptions_docs.md  nexstar_commands.md  protocol_docs.md  telescope_docs.md
docs/history/: CLI_DATA_IMPORT_FEATURE.md  FRESH_MIGRATION_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  README.md  SQLALCHEMY_COMPLETE.md
docs/plans/: CATALOG_EXPANSION_PLAN.md  FULL_SCREEN_TUI_PLAN.md  GUI_IMPLEMENTATION_PLAN.md  GUI_REFACTORING_SUMMARY.md  README.md  WHATS_VISIBLE_TONIGHT_PLAN.md
examples/: README.md  background_position_monitor.py  simple_position_tracking.py  track_during_slew.py
scripts/: check_api_coverage.py  check_contracts.py  create_missing_tables.py  create_seed_files.py  diagnose_star_names.py  fix_migration_state.py  import_openngc.py  migrate_catalog_to_sqlite.py  nexstar-gui-launcher.sh  remove_db_from_git_history.sh  run_mypy.sh  run_mypy_strict.sh  update_star_constellations.py
src/celestron_nexstar/: __init__.py  exceptions.py  protocol.py  telescope.py  types.py  utils.py
src/celestron_nexstar/api/: __init__.py  alignment.py  aurora.py  catalogs.py  comets.py  constants.py  constellations.py  converters.py  database.py  database_seeder.py  eclipses.py  enums.py  ephemeris.py  ephemeris_manager.py  equipment.py  exceptions.py  favorites.py  geohash_utils.py  importers.py  iss_tracking.py  light_pollution.py  light_pollution_db.py  meteor_shower_predictions.py  meteor_showers.py  models.py  movement.py  observation_planner.py  observations.py  observer.py  occultations.py  optics.py  planetary_events.py  protocol.py  satellite_flares.py  skyfield_utils.py  solar_system.py  space_events.py  star_name_mappings.py  sun_moon.py  telescope.py  (+8 more)
src/celestron_nexstar/api/astronomy/: __init__.py  comets.py  constellation_images.py  constellations.py  eclipses.py  meteor_shower_predictions.py  meteor_showers.py  occultations.py  planetary_events.py  solar_system.py  solar_system_ascii.py  sun_moon.py  variable_stars.py  (+1 more)
src/celestron_nexstar/cli/: __init__.py  data_import.py  main.py  movement.py  shell_app.py  tracking.py  tutorial.py
src/celestron_nexstar/examples/: __init__.py  basic_demo.py
src/celestron_nexstar/gui/: __init__.py  main.py  main_window.py
tests/: __init__.py  test_alignment.py  test_catalogs.py  test_clear_sky.py  test_colors.py  test_comets.py  test_compass.py  test_constants.py  test_constellations.py  test_converters.py  test_enums.py  test_exceptions.py  test_export_utils.py  test_filtering.py  test_geohash_utils.py  test_importers.py  test_light_pollution.py  test_meteor_shower_predictions.py  test_meteor_showers.py  test_movement.py  test_nexstar_api.py  test_nexstar_protocol.py  test_nexstar_utils.py  test_observation_planner.py  test_observation_planner_extended.py  test_observer.py  test_occultations.py  test_optics.py  test_planning_utils.py  test_scoring.py  test_space_events.py  test_space_weather.py  test_sun_moon.py  test_time_utils.py  test_tracking.py  test_types.py  test_utils.py  test_vacation_planning.py  test_variable_stars.py  test_visibility.py  (+2 more)
(+198 files in other folders)
