[project]
name = "celestron-nexstar"
version = "1.8.0"
description = "Python API for controlling Celestron NexStar 6SE telescopes via serial communication"
authors = [{email = "matthew@cosgriff.io"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["telescope", "celestron", "nexstar", "astronomy", "serial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "pyserial>=3.5",
    "deal>=4.24.5",
    "tqdm>=4.66.0",
    "returns>=0.23.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "shellingham>=1.5.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "toml>=0.10.2",
    "fuzzysearch>=0.7.3",
    "pyyaml>=6.0.0",
    "cachetools>=5.3.0",
    "skyfield>=1.49",
    "astropy>=6.0.0",
    "geopy>=2.4.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "textual>=0.80.0",
    "sqlalchemy>=2.0.0",
    "greenlet>=3.0.0", # Required for SQLAlchemy async operations (run_sync, etc.)
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "sqlalchemyseed>=0.4.0",
    "python-dotenv>=1.2.1",
    "aiohttp>=3.13.2",
    "certifi>=2024.0.0",
    "nest-asyncio>=1.6.0",
    "pillow>=12.0.0",
    "sphinx>=8.2.3",
    "timezonefinder>=6.2.0",
    "openmeteo-requests>=1.7.4",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.14.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "coverage[toml]>=7.6.0",
    "mypy>=1.18.2",  # Match pre-commit version for consistency
    "types-requests",
    "ruff>=0.14.4",
    "pre-commit>=4.0.0",
    "python-semantic-release>=9.0.0",
]

[project.scripts]
nexstar = "celestron_nexstar.cli.main:app"

[project.urls]
Homepage = "https://github.com/yourusername/celestron-nexstar"
Repository = "https://github.com/yourusername/celestron-nexstar"

[build-system]
requires = ["uv-build>=0.1.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.sources]

[tool.uv-build]
# Include data files in the package
include = [
    "src/celestron_nexstar/cli/data/*.yaml",
    "src/celestron_nexstar/py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::RuntimeWarning:unittest.mock",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--cov=celestron_nexstar",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/examples/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.semantic_release]
version_variable = [
    "src/celestron_nexstar/__init__.py:__version__",
    "src/celestron_nexstar/cli/__init__.py:__version__",
    "pyproject.toml:project.version",
]
build_command = "uv build"
dist_path = "dist"
upload_to_vcs_release = true
upload_to_pypi = false  # Set to true when ready to auto-publish
changelog_file = "CHANGELOG.md"
commit_author = "semantic-release <semantic-release>"
commit_message = "chore: release v{version}"
tag_commit = true
tag_message = "Release version {version}"
major_on_zero = false  # Treat 0.x versions as pre-release
version_toml = ["pyproject.toml:project.version"]

[tool.ruff]
# Set line length to match previous black configuration
line-length = 120
# Target Python 3.11+ (numpy 2.3.4+ requires Python 3.11+)
target-version = "py311"
# Exclude patterns
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "dist",
    "build",
]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and more
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
# Use black-compatible import sorting
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
# Use black-compatible formatting
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"src/celestron_nexstar/cli/*" = ["B008"]

[tool.mypy]
python_version = "3.11"
# Strict mode
# Note: To match pre-commit exactly, use:
#   - scripts/run_mypy.sh
# Or manually ensure plugins are installed and run:
#   - uv pip install types-pyserial returns deal
#   - uv run mypy --config-file=pyproject.toml --show-error-codes src/
# Pre-commit uses mypy v1.18.2 with specific additional dependencies
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true

# Show error codes
show_error_codes = true
pretty = true

# Exclude patterns
exclude = [
    "tests/",
    "examples/",
]

# Plugins
plugins = [
    "returns.contrib.mypy.returns_plugin",
    "sqlalchemy.ext.mypy.plugin",
    "deal.mypy",  # Add deal plugin for contract validation
]

# Per-module overrides for libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "typer",
    "typer.*",
    "rich",
    "rich.*",
    "geopy",
    "geopy.*",
    "skyfield",
    "skyfield.*",
    "fuzzysearch",
    "fuzzysearch.*",
    "yaml",
    "cachetools",
    "prompt_toolkit",
    "prompt_toolkit.*",
    "alembic",
    "alembic.*",
    "astropy",
    "astropy.*",
    "retry_requests",
    "retry_requests.*",
    "openmeteo_requests",
    "openmeteo_requests.*",
    "aiohttp",
    "aiohttp.*",
    "certifi",
    "certifi.*",
    "nest_asyncio",
    "timezonefinder",
    "timezonefinder.*",
    "requests_cache",
    "requests_cache.*",
    "feedparser",
    "feedparser.*",
    "dotenv",
    "dotenv.*",
    "sphinx",
    "sphinx.*",
    "PIL",
    "PIL.*",
    "numpy",
    "numpy.*",
    "pandas",
    "pandas.*",
    "geopandas",
    "geopandas.*",
    "shapely",
    "shapely.*",
    "bs4",
    "bs4.*",
    "playwright",
    "playwright.*",
    "selenium",
    "selenium.*",
    "click",
    "click.*",
    "dbus",
    "dbus.*",
    "CoreLocation",
    "CoreLocation.*",
    "winrt",
    "winrt.*",
]
ignore_missing_imports = true

# Allow untyped decorators in CLI code (typer decorators don't have stubs)
# Also disable misc errors for subclassing TyperGroup (which depends on click)
[[tool.mypy.overrides]]
module = "celestron_nexstar.cli.*"
disallow_untyped_decorators = false
disable_error_code = ["misc"]  # Disable "Class cannot subclass" errors for TyperGroup

# Allow untyped decorators for cachetools.cached (doesn't preserve types)
[[tool.mypy.overrides]]
module = "celestron_nexstar.api.catalogs.*"
disallow_untyped_decorators = false
warn_unused_ignores = false  # Type ignores needed for cachetools.cached return types

# Suppress unused ignore warnings for alembic import and deal contracts
[[tool.mypy.overrides]]
module = [
    "celestron_nexstar.api.database.*",
    "celestron_nexstar.cli.commands.data.*",
]
warn_unused_ignores = false  # Type ignore needed for alembic.command import and deal contracts

# Suppress unused ignore warnings for urllib3 import (may not have type stubs in all environments)
[[tool.mypy.overrides]]
module = "celestron_nexstar.api.events.space_weather"
warn_unused_ignores = false  # Type ignore needed for urllib3.util.retry import
ignore_missing_imports = true  # urllib3 is a transitive dependency and may not have type stubs

# Suppress deal contract type errors (known limitation with deal.mypy plugin)
# Deal contracts use lambdas that mypy cannot properly infer types for
[[tool.mypy.overrides]]
module = [
    "celestron_nexstar.api.telescope.*",
    "celestron_nexstar.api.location.observer",
    "celestron_nexstar.api.catalogs.*",
    "celestron_nexstar.api.ephemeris.*",
    "celestron_nexstar.api.database.*",
    "celestron_nexstar.api.observation.*",
]
warn_unused_ignores = false  # Type ignores needed for deal contracts
disable_error_code = ["misc", "arg-type"]  # Disable lambda type inference errors for deal contracts

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "types-cachetools>=6.2.0.20251022",
    "types-pyserial>=3.5.0.20251001",
    "types-pyyaml>=6.0.12.20250915",
    # Mypy plugins (matching pre-commit configuration)
    "returns>=0.23.0",  # Already in main deps, but needed for mypy plugin
    "deal>=4.24.5",  # Already in main deps, but needed for mypy plugin
]
